selfhost/test/typechecker/accessor/error_unknown_field_opt_known.abra
type Foo { str: String }

var f: Foo?
f.str